# onegov-hackaton-1

./: .gitignore  documentation.md  main.py  pyproject.toml  readme.md  test_synth_timeseries.py
data/: LA_20060101_20260129.json
docs/: synthese process.md
src/synthpop_python_poc/: cart_classifier.py  cart_regressor.py  encode.R  encode_categorical.R  encoder.py  metric.py  plotting.py  sampler.py  synth.py  transformNaNs.py  transform_timeseries.py  utils-encode_categorical.R
